--- a/projeto-f4bank/style.css
+++ b/projeto-f4bank/style.css
@@ -217,6 +217,10 @@ body {
 /* Mobile */
 @media (max-width: 999px) {
 
+    /* body {
+        overflow: hidden;
+    } */
+
     /* section 1*/
     .main-page .section-cpf .text{
         display: none;
